# FEWS

./: Basic.cpp  Basic.h  CMakeLists.txt  FEWS_Count.cpp  FEWS_Count.h  FEWS_FullyDynamic.cpp  FEWS_FullyDynamic.h  FEWS_Improve.cpp  FEWS_Improve.h  IsClosed.cpp  IsClosed.h  MinIds.cpp  MinIds.h  README.md  hash.cpp  hash.h  neighbor.h  reservoir.h
